[package]
name = "solana_client_ext"
version = "0.1.0"
edition = "2021"
authors = ["bergabman bergabman1@gmail.com"]
description = "Solana rust client extension for efficient transaction optimization"
license = "MIT" # Or any other license you choose
keywords = ["solana", "rpc", "client", "transaction", "compute-units", "optimization"]
categories = ["solana"] # Optional: Category for crates.io browsing

[dependencies]
solana-client = ">=1.18.22"
solana-sdk = ">=1.18.22"

[lib]
path = "src/lib.rs"